--- a/h2tshop/Content/Site.css
+++ b/h2tshop/Content/Site.css
@@ -2,8 +2,7 @@
     margin: 0;
     padding: 0;
 }
-body {
-    background-color: antiquewhite;
+body { 
     margin: 0;
     padding: 0;
     font-family: 'Vesper Libre', serif;
@@ -195,7 +194,8 @@ li {
 }
 
 100% {
-    transform: rotateY(0)
+    transform: rotateY(0);
+}
 }
 
 
