add font-end template

--- a/h2tshop/Views/Home/Index.cshtml
+++ b/h2tshop/Views/Home/Index.cshtml
@@ -2,7 +2,41 @@
     ViewBag.Title = "Home Page";
 }
 <style>
+    .title_cagetory {
+        color: black;
+        font-family: 'Adobe Devanagari';
+        display: inline-block;
+        text-align: center;
+        font-size: 35px;
+        margin: 0 auto;
+    }
 
+        .title_cagetory:hover {
+            color: orange;
+        }
+
+    .itemProduct {
+        box-sizing: border-box;
+        padding: 20px;
+    }
+
+        .itemProduct img {
+            width: 100%;
+            height: auto;
+        }
+
+        .itemProduct h3 {
+            color: black;
+            font-size: 15px;
+        }
+
+            .itemProduct h3:hover {
+                color: orange;
+            }
+
+    a {
+        text-decoration: none !important;
+    }
 </style>
 <div class="slideshow-container">
 
@@ -31,5 +65,179 @@
     <span class="dot"></span>
     <span class="dot"></span>
     <span class="dot"></span>
+</div>
+<!-- Sản phẩm mới -->
+<h5 class="text-center" ;>
+    <a href="#" class="title_cagetory text-center">New ArriVal</a>
+</h5>
+
+<div class="row newproduct">
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+</div>
+<!-- Sản phẩm sale -->
+<h5 class="text-center" ;>
+    <a  href="#" class="title_cagetory text-center">Sale up to 50%</a>
+</h5>
+
+<div class="row newproduct">
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
+    <div class="col-md-3 itemProduct">
+        <a style="text-decoration:none;" href="#">
+            <img src="~/Assest/aokhoac.jpg" />
+            <h3>
+                Áo Sweatshirt S.E  Triumphal 1334
+            </h3>
+        </a>
+
+        <p>550,000 đ</p>
+    </div>
 </div>
 <script src="~/Content/Home.js"></script>
