--- a/h2tshop/Content/mainStyle.css
+++ b/h2tshop/Content/mainStyle.css
@@ -45,8 +45,8 @@ img {
 
 /* The dots/bullets/indicators */
 .dot {
-    height: 15px;
-    width: 15px;
+    height: 7px;
+    width: 7px;
     margin: 0 2px;
     background-color: #bbb;
     border-radius: 50%;
@@ -92,3 +92,7 @@ img {
         font-size: 11px
     }
 }
+a{
+    text-decoration: none;
+}
+
