--- a/h2tshop/Views/Home/Index.cshtml
+++ b/h2tshop/Views/Home/Index.cshtml
@@ -72,86 +72,19 @@
 </h5>
 
 <div class="row newproduct">
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
+    @foreach (var item in @ViewBag.listSPNew)
+    {
+        <div class="col-md-3 itemProduct">
+            <a style="text-decoration:none;" href="/Product/detail?id=@item.MaSanPham">
+                <img src="@item.LinkAnh" />
+                <h3>
+                    @item.TenSanPham
+                </h3>
+            </a>
 
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
+            <p>@item.Gia đ</p>
+        </div>
+    }  
 </div>
 <!-- Sản phẩm sale -->
 <h5 class="text-center" ;>
@@ -159,85 +92,18 @@
 </h5>
 
 <div class="row newproduct">
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
+    @foreach (var item in @ViewBag.listSPNew)
+    {
+        <div class="col-md-3 itemProduct">
+            <a style="text-decoration:none;" href="/Product/detail?id=@item.MaSanPham">
+                <img src="@item.LinkAnh" />
+                <h3>
+                    @item.TenSanPham
+                </h3>
+            </a>
 
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
-    <div class="col-md-3 itemProduct">
-        <a style="text-decoration:none;" href="#">
-            <img src="~/Assest/aokhoac.jpg" />
-            <h3>
-                Áo Sweatshirt S.E  Triumphal 1334
-            </h3>
-        </a>
-
-        <p>550,000 đ</p>
-    </div>
+            <p>@item.Gia đ</p>
+        </div>
+    }
 </div>
 <script src="~/Content/Home.js"></script>
